# regex-parsec

./: README.md  regex-parsec.cabal
.github/workflows/: build.yml
Text/Regex/: Parsec.hs
Text/Regex/Parsec/: ByteString.hs  Common.hs  FullParsec.hs  FullParsecPosix.hs  Pattern.hs  ReadRegex.hs  RegexParsecState.hs  Sequence.hs  String.hs  Wrap.hs
Text/Regex/Parsec/ByteString/: Lazy.hs
